# mitm-ssl

./: .gitattributes  .gitignore  Makefile.am  README.md  configure.ac
scripts/: nmap.awk  run.sh
snakeoil/: snakeoil.key  snakeoil.pem
snakeoil/makecert/: cert.conf  createcert.sh  req.conf
src/: client-impl.c  client-impl.h  client.h  filter-string.c  filter-string.h  filter.h  global.h  main.c  mutate.h  mutator-string.c  mutator-string.h  server.c  server.h
